created function to request state and occupation data

--- a/index.html
+++ b/index.html
@@ -36,12 +36,15 @@
                     <input id="input-occupation" class="form-control" type="text" name="occupationInput" placeholder="Occupation">
                 </div>
                   
-                <input id="createUserBtn" type="submit" >
+                <input id="create-user-btn" type="submit" >
             </form>
 
             </form>
         </div>
         
         <script src="resources/scripts/createUser.js"></script>
+        <script>
+            loadOccupationAndStateData();
+        </script>
     </body>
 </html>
