--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
         <div class="center-screen ">
             <form id="create-user-form" class="shadow-lg" autocomplete="off">
+                <div id="form-header">Register</div>
                 <div class="form-group">
                     <div class="input-label">
                         <label>Name</label>
